@@ -1,4 +1,6 @@
 0.22 2022-10-31
+  [New Features]
+    * The defined method in the Sys supports __sun.
   [Test Fix]
     * Separate the tests of alarm and ualarm to other files in order to separate the effects of sleep
       The failed test is the following.
